# Mobile_Robot_RAISA

./: .gitignore  1_run_ui_atas.sh  2_stop_autorun.sh  3_start_ros.sh  README.md  chmod_all.sh  run.sh  touchscreensetup.txt  ui_run.sh
bag_record/bag_output/bag_sensor/: bag_sensor_0.db3  metadata.yaml
bag_record/bag_output/edu_CASE_CASE_ActiveYealding/: edu_CASE_StopAndWait_0.db3  metadata.yaml
bag_record/bag_output/edu_CASE_CrossBehind/: edu_CASE_CrossBehind_0.db3  metadata.yaml
bag_record/bag_output/edu_CASE_EscortMode/: edu_CASE_EscortMode_0.db3  metadata.yaml
bag_record/bag_output/edu_CASE_ProceedCaution/: edu_CASE_ProceedCaution_0.db3  metadata.yaml
bag_record/bag_output/edu_CASE_SittingApproach/: edu_CASE_SittingApproach_0.db3  metadata.yaml
bag_record/bag_output/edu_CASE_StandartPassing/: edu_CASE_StandartPassing_0.db3  metadata.yaml
bag_record/bag_output/edu_CASE_StandingApproach/: edu_CASE_StandingApproach_0.db3  metadata.yaml
bag_record/bag_output/edu_CASE_StopAndWait/: edu_CASE_StopAndWait_0.db3  metadata.yaml
bag_record/bag_output/fila_CASE_ActiveYealding/: fila_CASE_ActiveYealding_0.db3  metadata.yaml
bag_record/bag_output/fila_CASE_CrossBehind/: fila_CASE_CrossBehind_0.db3  metadata.yaml
bag_record/bag_output/fila_CASE_EscortMode/: fila_CASE_EscortMode_0.db3  metadata.yaml
bag_record/bag_output/fila_CASE_ProceedCaution/: fila_CASE_ProceedCaution_0.db3  metadata.yaml
bag_record/bag_output/fila_CASE_SittingApproach/: fila_CASE_SittingApproach_0.db3  metadata.yaml
bag_record/bag_output/fila_CASE_StandartPassing/: fila_CASE_StandartPassing_0.db3  metadata.yaml
bag_record/bag_output/fila_CASE_StandingApproach/: fila_CASE_StandingApproach_0.db3  metadata.yaml
bag_record/bag_output/fila_CASE_StopAndWait/: fila_CASE_StopAndWait_0.db3  metadata.yaml
bag_record/bag_output/navis_CASE_ActiveYealding/: metadata.yaml  navis_CASE_ActiveYealding_0.db3
bag_record/bag_output/navis_CASE_CrossBehind/: metadata.yaml  navis_CASE_CrossBehind_0.db3
bag_record/bag_output/navis_CASE_EscortMode/: metadata.yaml  navis_CASE_EscortMode_0.db3
bag_record/bag_output/navis_CASE_ProceedCaution/: metadata.yaml  navis_CASE_ProceedCaution_0.db3
bag_record/bag_output/navis_CASE_SittingApproach/: metadata.yaml  navis_CASE_SittingApproach_0.db3
bag_record/bag_output/navis_CASE_StandartPassing/: metadata.yaml  navis_CASE_StandartPassing_0.db3
bag_record/bag_output/navis_CASE_StandingApproach/: metadata.yaml  navis_CASE_StandingApproach_0.db3
bag_record/bag_output/navis_CASE_StopAndWait/: metadata.yaml  navis_CASE_StopAndWait_0.db3
src/communication/: CMakeLists.txt  package.xml
src/communication/include/: ReemanClient.hpp
src/communication/src/: io_reeman.cpp
src/hardware/: CMakeLists.txt  package.xml
src/hardware/script/: audio_controller.py  (+2 more)
src/master/: CMakeLists.txt  backup.txt  backup_nottimeout.txt  package.xml
src/master/src/: convert_csv.cpp  master.cpp
src/record/: CMakeLists.txt  package.xml
src/ros2_interface/: CMakeLists.txt
src/vision/: CMakeLists.txt  package.xml
src/world_model/: package.xml
(+198 files in other folders)
